# send

./: Cargo.toml  package-lock.json  send.example.toml  tailwind.config.js
android/: android.js
app/: main.css
app/ui/: archiveTile.js  body.js  footer.js  selectbox.js
dynerror/: Cargo.toml
dynerror/src/: lib.rs
src/: bytes_base64.rs  duration_positive_seconds.rs  main.rs
