[workspace]
resolver = "2"
members = ["dynerror"]

[package]
name = "send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynerror = { path = "./dynerror", features = ["axum"] }

axum = { version = "0.7.9", features = ["macros", "http2", "multipart"] }
serde = { version = "1.0.215", features = ["alloc", "derive"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = { version = "0.14.1", features = ["toml"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
rust-s3 = "0.35.1"
tokio-util = { version = "0.7.12", features = ["io", "full", "tracing"] }
ring = { version = "0.17.8", features = ["std"] }

